-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.10.0 FF
-
None
-
-
4bbaaf34d (dev), a4b3a614e (6.9)
qmlcompiler/qqmljscompilerstats_p.h", line 33: error #276: name followed by "::" must be a class or namespace name std::chrono::microseconds codegenDuration;
Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1735889385
Tested changes (refs/builds/qtci/dev/1735889382):
https://codereview.qt-project.org/c/qt/qtdeclarative/+/614670/2 Update dependencies on 'dev' in qt/qtdeclarative
https://codereview.qt-project.org/c/qt/qtdeclarative/+/610285/3 Bump version to 6.10.0
For Gerrit Dashboard: QTBUG-132528 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
614623,3 | qmlcompiler: include chrono | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
614690,3 | Compiler: Explicitly #include <chrono> | dev | qt/qtdeclarative | Status: ABANDONED | 0 | +1 |
615229,2 | qmlcompiler: include chrono | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |