qmlcompiler: include chrono

Fixes this build error:

In file included from src/qmlcompiler/qqmljscompilerstats.cpp:4:
src/qmlcompiler/qqmljscompilerstats_p.h:33:10: error: ‘chrono’ in
namespace ‘std’ does not name a type
   33 |     std::chrono::microseconds codegenDuration;
      |          ^~~~~~

Fixes: QTBUG-132528
Change-Id: Ibcb00a1506120afef3a540d2c2427b93c6c674d4
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>